# freeciv-nostr

./: FORK_NOTICE  README.md  meson.build
.github/workflows/: ci.yml  rust.yml
common/networking/: packet_trace.c  packet_trace.h  packets.c
rust/: Cargo.toml  README.md
rust/crates/freeciv-nostr-cli/: Cargo.toml
rust/crates/freeciv-nostr-cli/src/: main.rs
rust/crates/freeciv-nostr-core/: Cargo.toml
rust/crates/freeciv-nostr-core/src/: events.rs  lib.rs
rust/crates/freeciv-nostr-ffi/: Cargo.toml  cbindgen.toml
rust/crates/freeciv-nostr-ffi/src/: lib.rs
rust/crates/freeciv-nostr-net/: Cargo.toml
rust/crates/freeciv-nostr-net/src/: lib.rs
rust/crates/freeciv-nostr-verify/: Cargo.toml
rust/crates/freeciv-nostr-verify/src/: lib.rs
scripts/: build-rust.sh
server/: srv_main.c
tests/: packet_stats.py  run_packet_trace.sh
utility/: transport.c  transport.h
