[workspace]
resolver = "2"
members = [
    "crates/freeciv-nostr-core",
    "crates/freeciv-nostr-net",
    "crates/freeciv-nostr-verify",
    "crates/freeciv-nostr-ffi",
    "crates/freeciv-nostr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-2.0"
repository = "https://github.com/average-gary/freeciv-nostr"

[workspace.dependencies]
# Nostr
nostr = "0.44"
nostr-connect = "0.44"

# P2P Transport
iroh = "0.96"
iroh-gossip = "0.96"
iroh-blobs = "0.96"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
