[package]
name = "freeciv-nostr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
freeciv-nostr-core = { path = "../freeciv-nostr-core" }
freeciv-nostr-net = { path = "../freeciv-nostr-net" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
