[package]
name = "freeciv-nostr-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
freeciv-nostr-core = { path = "../freeciv-nostr-core" }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
